k8s/srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: srv
spec:
  type: NodePort
  selector:
    app: srv
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srv
spec:
  selector:
    matchLabels:
      app: srv
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: srv
    spec:
      containers:
      - image: outlier11111001000/srv:0.0.1
        name: srv
        ports:
        - containerPort: 80
          name: srv
